--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,11 +6,39 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
 
   <body>
-    <%= yield %>
+    <!-- Barra de navegação -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="<%= root_path %>">RailsYelpMVP</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <%= link_to 'All Restaurants', restaurants_path, class: 'nav-link' %>
+            </li>
+            <li class="nav-item">
+              <%= link_to 'Add Restaurant', new_restaurant_path, class: 'nav-link' %>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <!-- Conteúdo da página -->
+    <div class="container mt-4">
+      <%= yield %> <!-- Aqui o conteúdo das views será renderizado -->
+    </div>
+
+    <!-- Bootstrap JS (necessário para funcionalidades do Bootstrap, como o toggle da navbar) -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka2l1PA7gDT0kZLHrA3URm8XqgS2X5c7a5tQwFwtl3g26CUkPjI9Hg68wceH8J8z" crossorigin="anonymous"></script>
   </body>
 </html>
